# nas-5gs

./: .clang-format  .editorconfig  .gitignore  24501-g10-8-9.docx  24501-g10.docx  33401-980.doc  CMakeLists.txt  README.md  builder.cmd  def.hh  defs-24.501v16.10.tsv  extract-ie.py  extract-table.py  messages-24.501v16.10.tsv  nas-5gs.sln  nas-5gs.srctrldb  nas-5gs.srctrlprj  nas-msvc1500.sln  nas-nr.sln  scc.cmd  scc.sh  tidy.cmd  ts24.501-8-9.docx
nas-5gs/: CMakeLists.txt  README.md  ber.cc  ber.hh  charsets.cc  common.hh  config.hh  core.cc  core.hh  dissect_de_mm.cc  dissect_mm_msg.cc  dissect_mm_msg.hh  dissect_mm_msg_i.cc  dissect_mm_msg_sup.cc  dissect_nas5g.cc  dissect_nas5g.hh  dissect_nas5g_sup.cc  dissect_nas_5gs.cc  dissect_nas_5gs.hh  dissect_nas_5gs_i.cc  dissect_sm_msg.cc  dissect_sm_msg.hh  dissect_sm_msg_sup.cc  dissector.cc  e212.cc  e212_mcc_mnc.cc  eps.hh  expert_meta.hh  field_meta.cc  field_meta.hh  formats.cc  gsm.cc  gsm.hh  mm_registration_req.hh  nas-5gs.cc  nas-5gs.vcxproj  nas-5gs.vcxproj.filters  nas_5gs_msg.hh  packet_info.hh  proto.cc  (+7 more)
nas-5gs/common/: README.md  additional_inf.cc  additional_information.cc  common.hh  dnn.cc  e212_mcc_mnc.cc  eap.cc  gprs_timer.cc  gprs_timer2.cc  gprs_timer3.cc  intra_n1_mode.cc  intra_n1_mode_nas_container.cc  mcc_mnc.cc  n1_mode_s1_mode.cc  n1_mode_s1_mode_nas_container.cc  s1_mode_n1_mode.cc  s1_mode_n1_mode_nas_container.cc  s_nssai.cc
nas-5gs/mm/: 5gmm_capability.cc  5gmm_cause.cc  5gmm_status.cc  5gs_identity_type.cc  5gs_mobile_identity.cc  5gs_network_feature_support.cc  5gs_registration.hh  5gs_registration_accept.cc  5gs_registration_result.cc  5gs_registration_type.cc  5gs_tracking_area_identity.cc  5gs_update_type.cc  abba.cc  access_type.cc  additional_5g_security_infomation.cc  authentication_failure.cc  authentication_failure_parameter.cc  authentication_parameter_autn.cc  authentication_parameter_rand.cc  authentication_rej.cc  authentication_reject.cc  authentication_req.cc  authentication_request.cc  authentication_resp.cc  authentication_response.cc  authentication_response_parameter.cc  authentication_result.cc  conf_upd_cmd.cc  conf_update_comp.cc  configuration_upd_cmd.cc  configuration_update_cmd.cc  configuration_update_cmpl.cc  configuration_update_comp.cc  configuration_update_indication.cc  daylight_saving_time.cc  de_reg_accept_ue_orig.cc  de_reg_accept_ue_term.cc  de_reg_req_ue_orig.cc  de_reg_req_ue_term.cc  de_registration_req_ue_term.cc  (+98 more)
nas-5gs/sm/: 5gsm_capability.cc  5gsm_cause.cc  5gsm_congestion_reattempt_indicator.cc  5gsm_status.cc  allowed_scc_mode.cc  alwayson_pdu_session_indication.cc  alwayson_pdu_session_requested.cc  atsss_container.cc  dissect_pdu_ses_auth_cmd.cc  dissect_pdu_ses_auth_comp.cc  dissect_pdu_ses_est_acc.cc  dissect_pdu_ses_est_rej.cc  dissect_pdu_ses_mod_cmd.cc  dissect_pdu_ses_mod_com_rej.cc  dissect_pdu_ses_mod_comp.cc  dissect_pdu_ses_mod_rej.cc  dissect_pdu_ses_mod_req.cc  dissect_pdu_ses_rel_cmd.cc  dissect_pdu_ses_rel_comp.cc  dissect_pdu_ses_rel_rej.cc  dissect_pdu_ses_rel_req.cc  dissect_sm_status.cc  extended_protocol_configuration_options.cc  integrity_protection_maximum_data_rate.cc  mapped_eps_bearer_contexts.cc  maximum_number_of_supported_packet_filters.cc  pdu_address.cc  pdu_ses.cc  pdu_ses.hh  pdu_ses_auth_cmd.cc  pdu_ses_auth_comp.cc  pdu_ses_est_acc.cc  pdu_ses_est_rej.cc  pdu_ses_est_req.cc  pdu_ses_mod_cmd.cc  pdu_ses_mod_com_rej.cc  pdu_ses_mod_comp.cc  pdu_ses_mod_rej.cc  pdu_ses_mod_req.cc  pdu_ses_rel.hh  (+30 more)
nas-nr/: CMakeLists.txt  README.md  ber.cc  ber.hh  charsets.cc  common.hh  config.hh  core.cc  core.hh  description.hh  dissect_mm_msg.hh  dissect_mm_msg_sup.cc  dissect_nas5g.cc  dissect_nas5g.hh  dissect_nas5g_sup.cc  dissect_sm_msg.cc  dissect_sm_msg.hh  dissector.cc  dissectors.hh  dllmain.cc  dllmain.cpp  e212.cc  eps.hh  field_meta.cc  field_meta.hh  formats.cc  framework.h  ies.hh  messages.hh  nas-5gs.vcxproj.filters  nas-msvc1500.vcproj  nas-nr-compiler-detection.hh  nas-nr-demo.cc  nas-nr-demo.vcxproj  nas-nr-demo.vcxproj.filters  nas-nr-ts24501.vcxproj  nas-nr-ts24501.vcxproj.filters  nas-nr.cc  nas-nr.hh  nas_decrypt.cc  (+7 more)
nas-nr/base/: CMakeLists.txt  ber.cc  ber.hh  bufview.hh  charsets.cc  config.hh  core.hh  dissector.cc  e212.cc  e212_mcc_mnc.cc  field_meta.cc  field_meta.hh  formats.cc  nas-nr-compiler-detection.hh  packet.hh  packet_info.hh  proto.cc  proto.hh  r_string.hh  range_string.hh  tree_meta.hh  tvbuff.hh  v_string.hh  val_string.hh
nas-nr/common/: CMakeLists.txt  additional_information.cc  ber.cc  ber.hh  buff_view.hh  charsets.cc  common.hh  config.hh  context.hh  core.cc  core.hh  definitions.hh  description.hh  diag.cc  dissect_mm_msg.hh  dissect_mm_msg_sup.cc  dissect_nas5g.cc  dissect_nas5g.hh  dissect_nas5g_sup.cc  dissect_sm_msg.cc  dissect_sm_msg.hh  dissector.cc  dissector.hh  dissectors.hh  dissects.cc  dissects.hh  dnn.cc  e212.cc  e212_mcc_mnc.cc  eap.cc  expert_meta.hh  field_meta.cc  field_meta.hh  format.hh  formats.cc  formats.hh  gprs_timer.cc  gprs_timer2.cc  gprs_timer3.cc  gsm.cc  (+23 more)
nas-nr/mm/: 5gmm_capability.cc  5gmm_cause.cc  5gmm_status.cc  5gs_identity_type.cc  5gs_mobile_identity.cc  5gs_network_feature_support.cc  5gs_registration_result.cc  5gs_registration_type.cc  5gs_tracking_area_identity.cc  5gs_update_type.cc  CMakeLists.txt  abba.cc  access_type.cc  additional_5g_security_infomation.cc  additional_nr_security_infomation.cc  allowed_pdu_session_status.cc  authentication_failure.cc  authentication_failure_parameter.cc  authentication_parameter_autn.cc  authentication_parameter_rand.cc  authentication_reject.cc  authentication_request.cc  authentication_response.cc  authentication_response_parameter.cc  authentication_result.cc  configuration_update_cmd.cc  configuration_update_cmpl.cc  configuration_update_complete.cc  configuration_update_indication.cc  daylight_saving_time.cc  (+101 more)
security/: CMakeLists.txt  kdf.c  key_nas_deriver.c  key_nas_encryption.c  nas_stream_nea1.c  nas_stream_nea2.c  rijndael.c  secu_defs.h  security_types.h  snow3g.c  zuc.c  zuc.h
(+48 files in other folders)
