
set(MM_SRCS 5gmm_capability.cc
    5gmm_cause.cc
    5gmm_status.cc
    5gs_identity_type.cc
    5gs_mobile_identity.cc
    5gs_network_feature_support.cc
    5gs_registration_result.cc
    5gs_registration_type.cc
    5gs_tracking_area_identity.cc
    5gs_update_type.cc
    abba.cc
    access_type.cc
    additional_5g_security_infomation.cc
    allowed_pdu_session_status.cc
    authentication_failure.cc
    authentication_failure_parameter.cc
    authentication_parameter_autn.cc
    authentication_parameter_rand.cc
    authentication_reject.cc
    authentication_request.cc
    authentication_response.cc
    authentication_response_parameter.cc
    authentication_result.cc
    configuration_update_cmd.cc
    configuration_update_cmpl.cc
    configuration_update_indication.cc
    daylight_saving_time.cc
    deregistration_accept_ue_origin.cc
    deregistration_accept_ue_terminate.cc
    deregistration_request_ue_origin.cc
    deregistration_request_ue_terminate.cc
    deregistration_type.cc
    downlink_nas_transparent.cc
    drx_parameters.cc
    emergency_number_list.cc
    eps_bearer_context_status.cc
    eps_nas_message_container.cc
    eps_nas_security_algorithms.cc
    extended_drx_parameters.cc
    extended_emergency_number_list.cc
    identity_request.cc
    identity_response.cc
    id_req_result.cc
    imeisv_request.cc
    ladn_indication.cc
    ladn_information.cc
    ma_pdu_session_information.cc
    mico_indication.cc
    mobile_station_classmark2.cc
    nas_key_set_identifier.cc
    nas_message_container.cc
    nas_security_algorithms.cc
    network_name.cc
    network_slicing_indication.cc
    non_3gpp_nw_provided_policies.cc
    notification.cc
    notification_response.cc
    nssai.cc
    nssai_inclusion_mode.cc
    operator_defined_acccess_category_definitions.cc
    payload_container.cc
    payload_container_type.cc
    pdu_session_identity2.cc
    pdu_session_reactivation_result.cc
    pdu_session_reactivation_result_error_cause.cc
    pdu_session_status.cc
    plmn_list.cc
    registration_accept.cc
    registration_complete.cc
    registration_reject.cc
    registration_request.cc
    registration_request_inl.cc
    rejected_nssai.cc
    request_type.cc
    s1_ue_network_capability.cc
    s1_ue_security_capability.cc
    security_mode_command.cc
    security_mode_complete.cc
    security_mode_reject.cc
    security_protected_5gs_nas_message.cc
    service_accept.cc
    service_area_list.cc
    service_reject.cc
    service_request.cc
    service_type.cc
    sms_indication.cc
    sor_transparent_container.cc
    supported_codec_list.cc
    timezone.cc
    timezone_time.cc
    tracking_area_identity_list.cc
    ue_parameters_update_transparent_container.cc
    ue_status.cc
    ue_usage_setting.cc
    uplink_data_status.cc
    uplink_nas_transport.cc
    mm_dissects.hh
    mm_element_meta.hh
    mm_field_meta.hh    )

add_library(nas-nr-mm ${MM_SRCS})
# set_property(TARGET nas-nr-mm PROPERTY POSITION_INDEPENDENT_CODE TRUE)