
set(MM_SRCS  abba.cc
        access_type.cc
        additional_nr_security_infomation.cc
        allowed_pdu_session_status.cc
        authentication_failure.cc
        authentication_failure_parameter.cc
        authentication_parameter_autn.cc
        authentication_parameter_rand.cc
        authentication_reject.cc
        authentication_request.cc
        authentication_response.cc
        authentication_response_parameter.cc
        authentication_result.cc
        configuration_update_cmd.cc
        configuration_update_complete.cc
        configuration_update_indication.cc
        daylight_saving_time.cc
        deregistration_accept_ue_orig.cc
        deregistration_accept_ue_term.cc
        deregistration_request_ue_orig.cc
        deregistration_request_ue_term.cc
        deregistration_type.cc
        dl_nas_transport.cc
        drx_parameters.cc
        emergency_number_list.cc
        eps_bearer_context_status.cc
        eps_nas_message_container.cc
        eps_nas_security_algorithms.cc
        extended_drx_parameters.cc
        extended_emergency_number_list.cc
        id_req_result.cc
        identity_request.cc
        identity_response.cc
        imeisv_request.cc
        ladn_indication.cc
        ladn_information.cc
        ma_pdu_session_information.cc
        mico_indication.cc
        mm_dissects.hh
        mm_element_meta.hh
        mm_field_meta.hh
        mobile_station_classmark2.cc
        nas_key_set_identifier.cc
        nas_message_container.cc
        nas_security_algorithms.cc
        network_name.cc
        network_slicing_indication.cc
        nidentity_type.cc
        nmm_capability.cc
        nmm_cause.cc
        nmm_status.cc
        nmobile_identity.cc
        nnetwork_feature_support.cc
        non_3gpp_nw_provided_policies.cc
        notification.cc
        notification_response.cc
        nregistration_result.cc
        nregistration_type.cc
        nssai.cc
        nssai_inclusion_mode.cc
        ntracking_area_identity.cc
        nupdate_type.cc
        operator_defined_acccess_category_definitions.cc
        payload_container.cc
        payload_container_type.cc
        pdu_session_identity2.cc
        pdu_session_reactivation_result.cc
        pdu_session_reactivation_result_error_cause.cc
        pdu_session_status.cc
        plmn_list.cc
        registration_accept.cc
        registration_complete.cc
        registration_reject.cc
        registration_request.cc
        registration_request_inl.cc
        rejected_nssai.cc
        request_type.cc
        s1_ue_network_capability.cc
        s1_ue_security_capability.cc
        security_mode_command.cc
        security_mode_complete.cc
        security_mode_reject.cc
        security_protected_nr_nas_message.cc
        service_accept.cc
        service_area_list.cc
        service_reject.cc
        service_request.cc
        service_type.cc
        sms_indication.cc
        sor_transparent_container.cc
        supported_codec_list.cc
        timezone.cc
        timezone_time.cc
        tracking_area_identity_list.cc
        ue_parameters_update_transparent_container.cc
        ue_status.cc
        ue_usage_setting.cc
        uplink_data_status.cc
        ul_nas_transport.cc)

add_library(nas-nr-mm ${MM_SRCS})
# set_property(TARGET nas-nr-mm PROPERTY POSITION_INDEPENDENT_CODE TRUE)